--- a/FNN.ipynb
+++ b/FNN.ipynb
@@ -144,176 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "20d06f73",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pregnancies</th>\n",
-       "      <th>glucose</th>\n",
-       "      <th>blood_pressure</th>\n",
-       "      <th>skin_thickness</th>\n",
-       "      <th>insulin</th>\n",
-       "      <th>BMI</th>\n",
-       "      <th>diabetes_pedigree_function</th>\n",
-       "      <th>age</th>\n",
-       "      <th>diabetic_risk</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>6</td>\n",
-       "      <td>148</td>\n",
-       "      <td>72</td>\n",
-       "      <td>35</td>\n",
-       "      <td>0</td>\n",
-       "      <td>33.6</td>\n",
-       "      <td>0.627</td>\n",
-       "      <td>50</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>85</td>\n",
-       "      <td>66</td>\n",
-       "      <td>29</td>\n",
-       "      <td>0</td>\n",
-       "      <td>26.6</td>\n",
-       "      <td>0.351</td>\n",
-       "      <td>31</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>8</td>\n",
-       "      <td>183</td>\n",
-       "      <td>64</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>23.3</td>\n",
-       "      <td>0.672</td>\n",
-       "      <td>32</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>89</td>\n",
-       "      <td>66</td>\n",
-       "      <td>23</td>\n",
-       "      <td>94</td>\n",
-       "      <td>28.1</td>\n",
-       "      <td>0.167</td>\n",
-       "      <td>21</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>137</td>\n",
-       "      <td>40</td>\n",
-       "      <td>35</td>\n",
-       "      <td>168</td>\n",
-       "      <td>43.1</td>\n",
-       "      <td>2.288</td>\n",
-       "      <td>33</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>116</td>\n",
-       "      <td>74</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>25.6</td>\n",
-       "      <td>0.201</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>3</td>\n",
-       "      <td>78</td>\n",
-       "      <td>50</td>\n",
-       "      <td>32</td>\n",
-       "      <td>88</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>0.248</td>\n",
-       "      <td>26</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>10</td>\n",
-       "      <td>115</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>35.3</td>\n",
-       "      <td>0.134</td>\n",
-       "      <td>29</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   pregnancies  glucose  blood_pressure  skin_thickness  insulin   BMI  \\\n",
-       "0            6      148              72              35        0  33.6   \n",
-       "1            1       85              66              29        0  26.6   \n",
-       "2            8      183              64               0        0  23.3   \n",
-       "3            1       89              66              23       94  28.1   \n",
-       "4            0      137              40              35      168  43.1   \n",
-       "5            5      116              74               0        0  25.6   \n",
-       "6            3       78              50              32       88  31.0   \n",
-       "7           10      115               0               0        0  35.3   \n",
-       "\n",
-       "   diabetes_pedigree_function  age  diabetic_risk  \n",
-       "0                       0.627   50              1  \n",
-       "1                       0.351   31              0  \n",
-       "2                       0.672   32              1  \n",
-       "3                       0.167   21              0  \n",
-       "4                       2.288   33              1  \n",
-       "5                       0.201   30              0  \n",
-       "6                       0.248   26              1  \n",
-       "7                       0.134   29              0  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import dataset\n",
     "df_db = pd.read_csv(\"diabolic.csv\")\n",
-    "df_db.head(8)"
+    "# df_db.head(8)"
    ]
   },
   {
