--- a/autoinsurance.ipynb
+++ b/autoinsurance.ipynb
@@ -19,7 +19,7 @@
    "id": "20054a7d",
    "metadata": {},
    "source": [
-    "###### The algorithm below is NOT optimal. Getting it to work is more important."
+    "Steps of Data normalization"
    ]
   },
   {
