--- a/autoinsurance.ipynb
+++ b/autoinsurance.ipynb
@@ -19,7 +19,7 @@
    "id": "20054a7d",
    "metadata": {},
    "source": [
-    "Steps of Data normalization"
+    "###### Steps of data normalization"
    ]
   },
   {
